--- a/src/Global.css
+++ b/src/Global.css
@@ -3,50 +3,52 @@
 @tailwind utilities;
 
 @layer base {
-    html {
-      margin: 0px;
-      padding: 0px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+  html {
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+      sans-serif;
   }
-
-.register-image{
-    width: 35rem;
-    padding-top: 150px;
 }
 
-.top{
+.register-image {
+  width: 35rem;
+  padding-top: 150px;
+}
+
+.top {
   top: 1rem;
   left: 17.8rem;
 }
 
-.create_account{
+.create_account {
   font-weight: 500;
   font-size: 30px;
 }
 
-.already_account{
+.already_account {
   line-height: 30px;
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
   font-size: 17px;
 }
 
-.login{
+.login {
   width: 80%;
 }
 
-.login-page{
+.login-page {
   margin-left: 27px;
 }
 
-.account_selections{
-  background-color: #F8F3F3;
+.account_selections {
+  background-color: #f8f3f3;
   border-radius: 12px;
   padding: 12px 70px;
 }
 
-.account_selections h3{
+.account_selections h3 {
   font-size: 12px;
   font-weight: 600;
   margin-left: 18px;
@@ -65,8 +67,8 @@
 
 .checkbox-text {
   padding: 4px 0px;
-    gap: 5px;
-    display: flex;
+  gap: 5px;
+  display: flex;
 }
 
 .selected {
@@ -76,27 +78,26 @@
   color: white;
 }
 
-.selected img{
+.selected img {
   filter: invert(1);
 }
 
-
-.seperate-the-select{
+.seperate-the-select {
   display: flex;
   gap: 30px;
-    justify-content: space-around;
-    align-items: center;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .custom-input {
-  border: 1px solid rgba(0, 0, 0, 0.2); 
+  border: 1px solid rgba(0, 0, 0, 0.2);
   padding: 10px;
   border-radius: 5px;
   margin-top: 5px;
   height: 40px;
 }
 
-.custom-width{
+.custom-width {
   width: 100%;
 }
 
@@ -110,17 +111,16 @@
   box-sizing: border-box;
 }
 
-
-.all-aligh-set{
+.all-aligh-set {
   margin-top: 5px;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .register-button {
   width: 100%;
-  background-color: #0a65cc; 
+  background-color: #0a65cc;
   color: white;
   border: none;
   padding: 10px;
@@ -133,22 +133,22 @@
   background-color: #094b9b;
 }
 
-.text{
+.text {
   font-weight: 700;
-    font-size: 20px;
-    margin-right: 25px;
+  font-size: 20px;
+  margin-right: 25px;
 }
 
-.term-service{
-  color: rgba(0, 0, 0, 0.5); 
+.term-service {
+  color: rgba(0, 0, 0, 0.5);
 }
 
-.google-signup-button{
+.google-signup-button {
   border: 2px solid #00000020;
-    width: 100%;
-    padding: 6px;
-    border-radius: 5px;
-    margin-top: 10px;
+  width: 100%;
+  padding: 6px;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
 .navbar {
@@ -175,7 +175,6 @@
   margin-right: 15px;
 }
 
-
 .logo-navbar {
   display: flex;
   justify-content: space-between;
@@ -196,19 +195,19 @@
   position: absolute;
   right: 10%;
   border: 1px solid #4683b44b;
-  color: #0A65CC;
+  color: #0a65cc;
   padding: 10px 20px;
   border-radius: 5px;
-  filter: brightness(80%); 
+  filter: brightness(80%);
 }
 
 .verify {
   position: absolute;
   right: 10%;
-  padding: 10px 20px; 
+  padding: 10px 20px;
 }
 
-.bell-class{
+.bell-class {
   position: absolute;
   top: 20px;
   right: 100px;
@@ -234,14 +233,14 @@
   margin-bottom: 20px;
 }
 
-.text-content h2{
+.text-content h2 {
   font-size: 55px;
   font-weight: 600;
   line-height: 70px;
   padding-bottom: 15px;
 }
 
-.text-content p{
+.text-content p {
   font-weight: 400;
   font-size: 17px;
   color: rgba(0, 0, 0, 0.5);
@@ -255,12 +254,12 @@
   border-radius: 15px;
 }
 
-.search-inputs .input-search{
+.search-inputs .input-search {
   border: none;
   outline: none;
 }
 
-.search-inputs .one{
+.search-inputs .one {
   border-right: 1px solid #00000069;
   border-radius: 0;
   outline: none;
@@ -282,11 +281,11 @@
   cursor: pointer;
 }
 
-.logobanner{
+.logobanner {
   margin: 70px 80px;
 }
 
-.contain-all-box{
+.contain-all-box {
   padding-bottom: 70px;
   background-color: #f1f2f4;
 }
@@ -308,12 +307,12 @@
   border-radius: 10px;
 }
 
-.box:hover{
+.box:hover {
   box-shadow: 7px 7px 25px lightblue;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-.box .box-left img{
+.box .box-left img {
   background-color: hsla(240, 100%, 50%, 0.141);
 }
 
@@ -321,7 +320,7 @@
   width: 50%;
 }
 
-.box .box-left .image-of-alldata{
+.box .box-left .image-of-alldata {
   background: #f1f2f4;
   padding: 8px 8px;
 }
@@ -333,11 +332,11 @@
 
 .box-right {
   width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 10px;
-    margin-left: -30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px;
+  margin-left: -30px;
 }
 
 .top-section {
@@ -357,7 +356,6 @@
   height: 100vh;
 }
 
-
 .logo-section img {
   max-width: 200px;
 }
@@ -367,7 +365,7 @@
   margin-bottom: 160px;
 }
 
-.message-section p{
+.message-section p {
   padding-bottom: 20px;
 }
 
@@ -389,7 +387,7 @@
 
 .button-section button {
   padding: 10px 60px;
-  background-color:#0a65cc;
+  background-color: #0a65cc;
   color: white;
   border: none;
   border-radius: 5px;
@@ -400,19 +398,236 @@
   text-align: center;
 }
 
-.custom-width-forget{
- width: 27rem; 
- outline: none;
+.custom-width-forget {
+  width: 27rem;
+  outline: none;
 }
 
-.forget-email{
+.forget-email {
   padding-bottom: 10px;
 }
 
-.forget-pass{
+.forget-pass {
   padding-bottom: 20px;
 }
 
-.button-section .btn-padding{
+.button-section .btn-padding {
   padding: 10px 70px;
+}
+
+/* //////////////////////------------Employer Side --------------/////////////////////////////// */
+
+.emploClass {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #5249492b;
+  align-items: center;
+  padding: 25px 240px;
+  background-color: #ffffff;
+}
+
+.emploClass-left {
+  display: flex;
+  align-items: center;
+}
+
+.emploClass-right {
+  display: flex;
+  align-items: center;
+}
+
+.emploClass-logo {
+  width: 120px;
+  height: auto;
+}
+
+.emploClass-notification-icon,
+.emploClass-user-profile-image {
+  width: 30px;
+  height: auto;
+  margin-left: 10px;
+}
+
+.showcase {
+  display: flex;
+  width: 100%;
+}
+
+.showcase-all {
+  padding: 10px 40px;
+  text-align: end;
+}
+
+.showcase-left {
+  width: 30%;
+  background-color: #fcfcfc;
+  height: 85vh;
+}
+
+.show-inside-left {
+  display: flex;
+  flex-direction: column;
+}
+
+.btn-showcase {
+  display: flex;
+  align-items: center;
+  padding: 13px 30px;
+  border: none;
+  margin-top: 2px;
+  margin-left: 200px;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.btn-showcase:hover {
+  background-color: #e7f0fa;
+  color: #166edd;
+  transition: 0.1s;
+  font-weight: 600;
+  border-left: 3px solid #166edd;
+}
+
+.showcase-icons {
+  font-size: 30px;
+  width: 25px;
+}
+
+.btn-showcase svg {
+  margin-right: 5px;
+}
+
+.showright {
+  width: 80%;
+}
+
+.top-info {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  margin-top: 55px;
+  margin-left: 40px;
+}
+
+.bottom-info {
+  display: flex;
+}
+
+.bottom-left,
+.bottom-right {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0px 40px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.bottom-left {
+  background-color: #e7f0fa;
+}
+
+.bottom-right {
+  background-color: #fef3df;
+}
+
+.bottom-left,
+.bottom-right {
+  width: 50%;
+}
+
+.job-applied-info p,
+.favorite-candidate-info p {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.job-applied-info,
+.favorite-candidate-info {
+  margin: 20px 0px;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-between;
+  background-color: azure;
+  padding: 15px 20px;
+  border-radius: 7px;
+}
+
+.icon-size {
+  font-size: 30px;
+}
+
+.bills-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  padding: 25px 60px;
+}
+
+.bill-box {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 15px;
+}
+
+.showright h2 {
+  font-size: 20px;
+  padding-left: 55px;
+  font-weight: 500;
+  padding-top: 10px;
+}
+
+.billAmount {
+  font-size: 40px;
+  font-weight: 700;
+  color: #0A65CC;
+}
+
+.billAmount span{
+  font-size: 20px;
+}
+
+.billdesc {
+  color: #000000a1;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.billdate{
+  color: red;
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.billedit{
+  padding: 10px 65px;
+  border-radius: 5px;
+  background-color: #0A65CC;
+  color: #fff;
+}
+
+.billdelete{
+  padding: 10px 40px;
+    font-weight: 500;
+    border-radius: 5px;
+    color: #fff;
+    background-color: rgb(244, 13, 13);
+    margin-left: 10px;
+}
+
+.border-dotted{
+  border: dotted #04285265;
+  border-radius: 10px;
+}
+
+.border-dotted .posticon{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
+    color: rgb(98 76 76 / 50%);
 }
