--- a/src/Global.css
+++ b/src/Global.css
@@ -454,7 +454,7 @@
 }
 
 .showcase-all {
-  padding: 10px 40px;
+  padding: 0px 40px;
   text-align: end;
 }
 
@@ -505,8 +505,7 @@
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 20px;
-  margin-top: 55px;
-  margin-left: 40px;
+  margin-left: 15px;
 }
 
 .bottom-info {
@@ -647,7 +646,6 @@
   padding-left: 0;
 }
 
-
 .subscription-details {
   display: flex;
   padding-top: 15px;
@@ -671,7 +669,7 @@
   align-items: stretch; /* Make all boxes the same height */
 }
 
-.subscription-plans .plan-all{
+.subscription-plans .plan-all {
   margin: 0px 40px;
 }
 
@@ -683,64 +681,62 @@
   border-radius: 10px;
 }
 
-.plan h3{
+.plan h3 {
   font-size: 20px;
-    font-weight: 700;
-    color: blue;
+  font-weight: 700;
+  color: blue;
 }
 
-.plan p{
+.plan p {
   font-size: 13px;
   font-weight: 400;
   padding-top: 10px;
   padding-bottom: 18px;
 }
 
-.plan .amount-month{
+.plan .amount-month {
   font-size: 30px;
 }
 
-.plan .amount-month span{
+.plan .amount-month span {
   font-size: 20px;
   font-weight: 700;
 }
 
 .choose-plan-button {
   padding: 10px 30px;
-    color: white;
-    background-color: blue;
-    margin: 30px 45px;
+  color: white;
+  background-color: blue;
+  margin: 30px 45px;
 }
-
 
 /* ///////////////////////////////////////////////////////////////////////////////////////////////////// */
 
-.modal-content .post-Job{
+.modal-content .post-Job {
   font-size: 2rem;
-    font-weight: 700;
-    padding-top: 5px;
-    padding-left: 40px;
+  font-weight: 700;
+  padding-top: 5px;
+  padding-left: 40px;
 }
-
 
 /* /////////////////////////////////////////job - find ///////////////////////////////////////////////////// */
 
-.job-Show{
+.job-Show {
   background-color: #f1f2f4;
   display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 80px;
-    align-items: center;
-    padding: 0px 170px;
-    font-size: 15px;
-    font-weight: 600;
+  justify-content: space-between;
+  width: 100%;
+  height: 80px;
+  align-items: center;
+  padding: 0px 170px;
+  font-size: 15px;
+  font-weight: 600;
 }
 
 .job-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   gap: 15px;
   padding: 40px 140px;
 }
@@ -749,47 +745,415 @@
   width: calc(33.33% - 10px);
   border: 1px solid #ccc;
   border-radius: 5px;
-  padding: 20px;
+  padding: 15px 18px;
   box-sizing: border-box;
-  box-shadow: 1px 1px 3px 1px #b8bcc0;
+  font-weight: 400;
+  box-shadow: 0 0 6px 0.2px #adadaddb;
 }
 
 .job-box h3 {
-  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 19px;
+  font-weight: 600;
 }
 
-.job-box p {
-  margin: 5px 0;
+.job-box .uppercase {
+  text-transform: uppercase;
+  background: #e7f6ea;
+  color: green;
+  padding: 2px 8px;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 14px;
 }
 
-.job-box-type-amount{
+.job-box .salary-nego {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgba(64, 72, 10, 0.8);
+}
+
+.job-box-type-amount {
+  display: flex;
+  gap: 10px;
+  padding-bottom: 5px;
+}
+
+.job-box .company-bold {
+  font-size: 18px;
+  text-transform: capitalize;
+  font-weight: 500;
+}
+
+.job-box .location-change {
+  font-weight: 500;
+  font-size: 13px;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.job-box-logo-loca {
   display: flex;
   gap: 15px;
-}
-
-.job-box-logo-loca{
-  display: flex;
-  gap: 5px;
+  align-items: center;
 }
 
 .job-box img {
-  max-width: 100px;
-  max-height: 100px;
+  border-radius: 10px;
+  width: 40px;
+  height: 40px;
 }
 
-.job-search-apply{
-  padding: 20px 40px;
-    border: 1px solid antiquewhite;
-    margin: 0px 140px;
-    display: flex;
-    justify-content: space-between;
+.job-search-apply {
+  padding: 5px 40px;
+  border: 1px solid antiquewhite;
+  margin: 0px 140px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+  align-items: center;
 }
 
-.job-filter input{
+.job-filter input {
   outline: none;
   border: none;
 }
 
-.job-filter .input1{
+.job-filter .input1 {
   width: 500px;
+  border-right: 2px solid antiquewhite;
+  padding: 15px 0px;
+  margin-right: 25px;
+}
+
+.full-cover-job-detail {
+  padding: 25px 160px;
+}
+
+.job-detail-full-head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.job-detail-imgcmp-info {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+}
+
+.company-main {
+  font-size: 15px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+.job-detail-apply {
+  display: flex;
+  justify-content: space-between;
+}
+
+.job-desc-full {
+  display: flex;
+  gap: 20px;
+}
+
+.job-desc-full .job-description {
+  max-width: 45rem;
+}
+
+.job-desc-full .job-description .job-desc-req {
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 12px;
+  padding-top: 12px;
+}
+
+.salary-location-overview .firs-left-part {
+  display: flex;
+  justify-content: space-around;
+}
+
+.salary-location-overview .salary-location {
+  padding: 23px 30px;
+  text-align: center;
+  border: 1px solid #0428523b;
+}
+
+.job-detail-apply .job-apply-btn {
+  background: #0a65cc;
+  padding: 10px 90px;
+}
+
+.btn-over-sett:hover {
+  color: #166edd;
+  transition: 0.1s;
+  font-weight: 600;
+  border-bottom: 3px solid;
+}
+
+.boxshow .profileuploading {
+  padding: 54px 65px;
+  background: whitesmoke;
+  width: 231px;
+  border: dotted;
+  border-radius: 7px;
+  text-transform: capitalize;
+}
+
+.boxshow .banneruploading {
+  padding: 54px 240px;
+  width: 600px;
+  text-transform: capitalize;
+}
+
+/* //////////////////////////////////////////////////////////////////////////////////// */
+
+.comapny-input-from {
+  display: flex;
+  flex-direction: column;
+}
+
+.comapny-input-from div {
+  margin-bottom: 20px;
+}
+
+.comapny-input-from div {
+  margin-bottom: 20px;
+}
+
+.comapny-input-from label {
+  font-weight: bold;
+}
+
+.comapny-input-from input[type="text"],
+.comapny-input-from textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+.comapny-input-from textarea {
+  height: 100px;
+}
+
+.comapny-input-from input[type="text"]:focus,
+.comapny-input-from textarea:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.New-Employers h1 {
+  padding: 10px 3px;
+  font-size: 17px;
+  font-weight: 700;
+}
+
+/* /////////////////////////////////// table design  /////////////////////// */
+
+.New-Employers {
+  padding: 20px;
+}
+
+.employers-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.employers-table th,
+.employers-table td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+.employers-table th {
+  background-color: #f2f2f2;
+}
+
+.employers-table td button {
+  margin-right: 5px;
+}
+
+.approve-btn {
+  background-color: #557656;
+  color: white;
+  border-radius: 5px;
+  border: none;
+  padding: 5px 10px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+.decline-btn {
+  background-color: #f44336;
+  color: white;
+  border-radius: 5px;
+  font-weight: 400;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.Header-part-for-video {
+  width: 100%;
+  background-color: #5d5fef;
+  text-align: center;
+  font-weight: 600;
+  color: white;
+  padding: 15px 0px;
+}
+
+/* //////////////////////////////meet///////////////////////////////////// */
+
+.meeting-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* Dark transparent background */
+}
+
+.meeting-lobby-form {
+  background-color: #ffffff; /* White background */
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Box shadow */
+}
+
+.meeting-label {
+  margin-bottom: 5px;
+  display: block;
+}
+
+.meeting-input[type="email"],
+.meeting-input[type="text"] {
+  width: 100%;
+  padding: 10px 80px;
+  padding-left: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.meeting-button {
+  background-color: #007bff; /* Blue color */
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.meeting-button:hover {
+  background-color: #0056b3; /* Darker shade of blue on hover */
+}
+
+/* ////////////////////room///////////////// */
+
+.roompart-video-container {
+  display: flex;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.roompart-video {
+  width: 50%;
+}
+
+.roompart-status {
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.roompart-button {
+  background-color: #6e6ef3;
+  color: white;
+  font-size: 15px;
+  padding: 6px 20px;
+  align-items: center;
+  font-weight: 700;
+  border-radius: 3px;
+}
+
+
+/* Add this CSS to your stylesheet */
+
+.filter-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999; 
+}
+
+.filter-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 25%;
+  height: 100%;
+  z-index: 1000; 
+}
+
+.filter-modal-content {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  height: 100%;
+}
+
+.filter-modal-content h2 {
+  margin-bottom: 20px;
+}
+
+.filter-modal-content div {
+  margin-bottom: 20px;
+}
+
+.filter-modal-content h3 {
+  margin-bottom: 10px;
+}
+
+.filter-modal-content label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.filter-modal-content input[type="checkbox"],
+.filter-modal-content input[type="radio"] {
+  margin-right: 5px;
+}
+
+.filter-modal-content button {
+  background-color: #4c63af;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.filter-modal-content button:hover {
+  background-color: #4c63af;
+}
+
+
+.resume-part{
+  margin-top: 10px;
+    width: 20%;
+    padding: 10px;
+    background-color: #d7ecff;
+    border-radius: 6px;
+}
+
+.resume-user{
+  padding: 10px 10px;
+    background-color: antiquewhite;
+    border-radius: 10px;
+    margin: 5px 0px;
 }
