--- a/src/Global.css
+++ b/src/Global.css
@@ -217,7 +217,7 @@
   display: flex;
   justify-content: center;
   background-color: #f7f7f8;
-  height: 80vh;
+  /* height: 95vh; */
 }
 
 .left-section {
@@ -273,7 +273,7 @@
 }
 
 .search-inputs button {
-  padding: 10px 20px;
+  /* padding: 10px 20px; */
   border-radius: 5px;
   background-color: #4682b4;
   color: #fff;
